# kb_trackpoint_extension

./: .gitignore  .pre-commit-config.yaml  Justfile  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
exports/: README.md
src/: export_tp_green_t430.scad  export_tp_green_t430_variations_local.scad  export_tp_green_t430_with_t460s_cap.scad  export_tp_red_t460s.scad  export_tp_red_t460s_variations.scad  export_tp_red_t460s_variations_bigger.scad  export_tp_red_t460s_variations_bigger_more.scad  export_tp_red_t460s_variations_smaller.scad  export_tp_red_t460s_with_dell_cap.scad  parameter_defaults.scad  stl_combiner.scad  trackpoint_extension.scad
src/shared/: measurements.scad
src/tp_extension_builder/: cli.py  cli_helpers.py  defines.py  tp_caps.py  tp_extensions.py  utils.py
stl/: README.md
testing/: testing.py
tp_extension_builder/: cli.py  cli_helpers.py  defines.py  tp_caps.py  tp_extension_builder.py  tp_extensions.py  utils.py
