[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "tp_extension_builder"
description = "Scripts to generate 3D-printable models that increase the height of Lenovo TrackPoints to make them usable on ergonomic keyboards."
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "build123d>=0.9.1",
    "pre-commit>=4.2.0",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ocp-vscode>=2.7.1",
    "ruff>=0.11.9",
]

[project.urls]
"Repository" = "https://github.com/infused-kim/kb_trackpoint_extension"

[project.scripts]
tp_extension_builder = "tp_extension_builder.cli:app"


[tool.setuptools_scm]
version_file = "src/tp_extension_builder/_version.py"


[tool.ruff]
line-length = 79
exclude = [
    "testing/*.py",
]

[tool.ruff.lint]
extend-select = [
    "E501",  # line-too-long
]
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true


[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    'testing/.*.py'
]

[[tool.mypy.overrides]]
module = "build123d"
no_implicit_optional=false
